Updated alignment issues and other remaining issues

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -109,7 +109,7 @@ header,
 .menu_overlay {
   position: fixed;
   left: 0;
-  top: 70px;
+  top: 107px;
   width: 0;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
@@ -126,12 +126,12 @@ header,
   .header_content ul {
     border-top: 1px solid #eee;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     gap: 40px;
     position: fixed;
     right: -300px;
-    top: 69px;
-    width: 280px;
+    top: 100px;
+    width: 191px;
     height: calc(100vh - 70px);
     background-color: var(--white);
     transition: var(--main-transition);
