--- a/src/index.css
+++ b/src/index.css
@@ -49,12 +49,15 @@ p {
 }
 
 .margin-sections {
-  margin-top: 90px;
+  margin-top: 122px;
+  width: fit-content;
 }
-
+.zoom-out-down{
+  width: auto !important;
+}
 @media (max-width: 900px) {
   .margin-sections {
-    margin-top: 70px;
+    margin-top: 102px;
   }
 }
 
